--- a/info/docs.texi
+++ b/info/docs.texi
@@ -878,8 +878,8 @@ Interactive PREFIX arg makes the new setting global.
 
 @format
 Toggles state of  dtk-quiet.
-Turning on this switch silences speech.
-Optional interactive prefix arg causes this setting to become global.
+Turning on this switch silences speech.  Optional interactive
+prefix arg causes this setting to become global.
 @end format
 @end deffn
 
@@ -914,10 +914,10 @@ value, and then set the current local value to the result.
 
 @format
 Toggle split caps mode.
-Split caps mode is useful when reading
-Hungarian notation in program source code.  Interactive PREFIX arg
-means toggle the global default value, and then set the current local
-value to the result.
+Split caps mode is useful when reading Hungarian notation in
+program source code.  Interactive PREFIX arg means toggle the
+global default value, and then set the current local value to the
+result.
 @end format
 @end deffn
 
@@ -1680,6 +1680,11 @@ Speak Eldoc documentation if available.
 
 @defvar {User Option} emacspeak-speak-errors
 Specifies if error messages are cued.
+
+@end defvar
+
+@defvar {User Option} emacspeak-speak-messages-filter
+List of strings used to filter spoken messages.
 
 @end defvar
 
@@ -14939,16 +14944,6 @@ Optional interactive PREFIX arg toggles global value.
 
 @subsection emacspeak-sounds Options
 
-@defvar {User Option} emacspeak-auditory-icon-function
-Function that plays auditory icons.
-play : Launches play-program to play.
-Serve: Send a command to the speech-server to play.
-Queue : Add auditory icon to speech queue.
-Native : Use Emacs’ builtin sound support.
-Use Serve when working with remote speech servers.
-
-@end defvar
-
 @defvar {User Option} emacspeak-play-args
 Set this to nil if using paplay from pulseaudio.
 
@@ -15359,11 +15354,10 @@ voice annotated first,  see command ‘emacspeak-speak-voice-annotate-paragraphs
 
 @format
 Speak name of file being visited in current buffer.
-Speak default directory if invoked in a dired buffer,
-or when the buffer is not visiting any file.
-Interactive prefix arg ‘filename’ speaks only the final path
-component.
-The result is put in the kill ring for convenience.
+Speak default directory if invoked in a dired buffer, or when the
+buffer is not visiting any file.  Interactive prefix arg
+‘filename’ speaks only the final path component.  The result is
+put in the kill ring for convenience.
 
 (fn &optional FILENAME)
 @end format
@@ -15759,7 +15753,7 @@ the sense of the filter.
 @format
 Speak the last message from Emacs once again.
 The message is also placed in the kill ring for convenient yanking
-if ‘emacspeak-speak-message-again-should-copy-to-kill-ring’ is set.
+if ‘emacspeak-speak-message-again-copy-as-kill’ is set.
 
 (fn &optional FROM-MESSAGE-CACHE)
 @end format
@@ -15833,7 +15827,8 @@ Negative prefix arg speaks from start of buffer to point.
 
 @format
 Speak the minor mode-information.
-Optional  interactive prefix arg ‘log-msg’ logs spoken info to *Messages*.
+Optional interactive prefix arg ‘log-msg’ logs spoken info to
+*Messages*.
 
 (fn &optional LOG-MSG)
 @end format
