--- a/info/.spell.tex
+++ b/info/.spell.tex
@@ -29,6 +29,7 @@ APT's
 AQI
 ArchWiki
 arg
+Arg
 ARG
 args
 ASIN
@@ -107,7 +108,6 @@ CPerl
 csv
 ctl
 ctlx
-cueing
 customizable
 customizations
 datetime
