--- a/info/.spell.tex
+++ b/info/.spell.tex
@@ -141,6 +141,7 @@ Dmacro
 dnd
 docbook
 DocBook
+docsig
 doctex
 dom
 Dom
@@ -518,6 +519,8 @@ sdcv
 SDCV
 SDK
 sel
+selectrum
+SELECTRUM
 ses
 Ses
 setq
